[project]
name = "eda-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "tabulate>=0.9.0",
    "typer>=0.20.0",
]

[project.scripts]
eda-cli = "eda_cli.cli:app"