[project]
name = "eda-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.126.0",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "python-multipart>=0.0.21",
    "tabulate>=0.9.0",
    "typer>=0.20.0",
    "uvicorn[standard]>=0.38.0",
]

[project.scripts]
eda-cli = "eda_cli.cli:app"
